src/test/resources/frontendReference/invalid/semanticErr/exit/globalReturn.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:2 -- Cannot return from the global scope.
